// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Box default 1`] = `
.c0 {
  margin-top: 1.25rem;
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`Box Box supports background-color 1`] = `
.c0 {
  background-color: #6C43E0;
}

<div
  className="c0"
/>
`;

exports[`Box Box supports display 1`] = `
.c0 {
  display: inline-block;
}

<div
  className="c0"
  display="inline-block"
/>
`;

exports[`Box Box supports height properties 1`] = `
.c0 {
  height: 1vh;
}

<div
  className="c0"
  height="1vh"
/>
`;

exports[`Box Box supports height properties 2`] = `
.c0 {
  max-height: 1vh;
}

<div
  className="c0"
/>
`;

exports[`Box Box supports height properties 3`] = `
.c0 {
  min-height: 1vh;
}

<div
  className="c0"
/>
`;

exports[`Box Box supports position, top, left, bottom, right 1`] = `
.c0 {
  position: absolute;
}

<div
  className="c0"
/>
`;

exports[`Box Box supports position, top, left, bottom, right 2`] = `
.c0 {
  top: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Box Box supports position, top, left, bottom, right 3`] = `
.c0 {
  left: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Box Box supports position, top, left, bottom, right 4`] = `
.c0 {
  right: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Box Box supports position, top, left, bottom, right 5`] = `
.c0 {
  bottom: 1rem;
}

<div
  className="c0"
/>
`;

exports[`Box Box supports responsive fontSize and lineHeight 1`] = `
.c0 {
  font-size: 0.875rem;
}

@media screen and (min-width:30rem) {
  .c0 {
    font-size: 1.125rem;
  }
}

<div
  className="c0"
  fontSize={
    Array [
      "small",
      "large",
    ]
  }
/>
`;

exports[`Box Box supports responsive fontSize and lineHeight 2`] = `
.c0 {
  line-height: 1.25rem;
}

@media screen and (min-width:30rem) {
  .c0 {
    line-height: 1.75rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Box Box supports width 1`] = `
.c0 {
  width: 1vw;
}

<div
  className="c0"
  width="1vw"
/>
`;

exports[`Box Box supports width 2`] = `
.c0 {
  max-width: 1vw;
}

<div
  className="c0"
/>
`;

exports[`Box Box supports width 3`] = `
.c0 {
  min-width: 1vw;
}

<div
  className="c0"
/>
`;

exports[`Box Box with SizeNone is valid 1`] = `
.c0 {
  margin-top: 0rem;
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`Box Box with null values are removed from styling 1`] = `
.c0 {
  margin-top: 1.25rem;
}

@media screen and (min-width:48rem) {
  .c0 {
    margin-top: 1rem;
  }
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`Box Responsive margin top Box 1`] = `
.c0 {
  margin-top: 1.25rem;
}

@media screen and (min-width:30rem) {
  .c0 {
    margin-top: 1rem;
  }
}

@media screen and (min-width:48rem) {
  .c0 {
    margin-top: 0.75rem;
  }
}

<div
  className="c0"
>
  🥑
</div>
`;

exports[`Box borders Box supports borders 1`] = `
.c0 {
  border: 1px solid black;
}

<div
  className="c0"
/>
`;

exports[`Box borders supports borderColor 1`] = `
.c0 {
  border-color: #DEE1E5;
}

<div
  className="c0"
/>
`;

exports[`Box borders supports borderRadius 1`] = `
.c0 {
  border-radius: 0.25rem;
}

<div
  className="c0"
/>
`;

exports[`Box core HTML attributes Box allows autoFocus 1`] = `
<div
  autoFocus={true}
  className=""
>
  Autofocus?
</div>
`;

exports[`Box core HTML attributes Box allows for ARIA attributes 1`] = `
<div
  aria-disabled={true}
  className=""
>
  aria-disabled
</div>
`;

exports[`Box core HTML attributes Box allows for HTML events 1`] = `
<div
  className=""
  onMouseEnter={[Function]}
>
  Autofocus?
</div>
`;

exports[`Box flex supports flex item properties 1`] = `
.c0 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-basis: 1;
  -ms-flex-preferred-size: 1;
  flex-basis: 1;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  -webkit-order: unset;
  -ms-flex-order: unset;
  order: unset;
}

<div
  className="c0"
  order="unset"
/>
`;

exports[`Box flex supports flex properties 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
  display="flex"
/>
`;

exports[`Box fonts font helpers 1`] = `
.c0 {
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
}

<div
  className="c0"
  fontFamily="brand"
/>
`;

exports[`Box fonts font helpers 2`] = `
.c0 {
  font-size: 0.875rem;
}

<div
  className="c0"
  fontSize="small"
/>
`;

exports[`Box fonts font helpers 3`] = `
.c0 {
  font-weight: 700;
}

<div
  className="c0"
  fontWeight="bold"
/>
`;

exports[`Box fonts font helpers 4`] = `
.c0 {
  -webkit-letter-spacing: 10;
  -moz-letter-spacing: 10;
  -ms-letter-spacing: 10;
  letter-spacing: 10;
}

<div
  className="c0"
  letterSpacing="10"
/>
`;

exports[`Box fonts font helpers 5`] = `
.c0 {
  line-height: 1.5rem;
}

<div
  className="c0"
/>
`;

exports[`Box fonts font helpers 6`] = `
.c0 {
  text-align: right;
}

<div
  className="c0"
/>
`;

exports[`Box fonts font helpers 7`] = `
.c0 {
  color: #939BA5;
}

<div
  className="c0"
  color="palette.charcoal400"
/>
`;
